<b><u> v3.00, 12.06.2017</b></u>
<font color=#FF8C00>&#9830;</font> !! PLEASE DO A FRESH INSTALL !!
<font color=#FF8C00>&#9830;</font> Add a skin for Premade Group Filter
<font color=#FF8C00>&#9830;</font> Updated and edit a lot of skins
<font color=#FF8C00>&#9830;</font> Remove some code to position the AlwaysUpFrame
<font color=#FF8C00>&#9830;</font> Update BigWigs skin (now half-bar)
<font color=#FF8C00>&#9830;</font> Hide the Notifications if you are in combat
<font color=#FF8C00>&#9830;</font> Use the new method from ElvUI to register modules
<font color=#FF8C00>&#9830;</font> Add bindings for the RaidMarkBar
<font color=#FF8C00>&#9830;</font> The tabs from ElvUI are now transparent
<font color=#FF8C00>&#9830;</font> Fix a rar nil error in CoolDownFlash with Dual Profiles enabled
<font color=#FF8C00>&#9830;</font> Update profile creation for the AddOns. It now uses char specific profiles

<b><u> v2.36, 03.05.2017</b></u>
<font color=#FF8C00>&#9830;</font> Changed the main texture to muiBlank
<font color=#FF8C00>&#9830;</font> Update TradeSkillTabs.
<font color=#FF8C00>&#9830;</font> Update XIV_Databar profile & skin.
<font color=#FF8C00>&#9830;</font> Update AddOnSkins profile.
<font color=#FF8C00>&#9830;</font> Overhaul the options a bit.
<font color=#FF8C00>&#9830;</font> Add a BenikUI versions warning.
<font color=#FF8C00>&#9830;</font> Delete SorhaQuestLog profile.

<b><u> v2.35, 24.04.2017</b></u>
<font color=#FF8C00>&#9830;</font> Delete the spell tolerance script.
<font color=#FF8C00>&#9830;</font> Update the quest module to select the quest reward with the highest price.

<b><u> v2.34.1, 23.04.2017</b></u>
<font color=#FF8C00>&#9830;</font> Disable the quest module. 

<b><u> v2.34, 23.04.2017</b></u>
<font color=#FF8C00>&#9830;</font> Fix an error in UIButtons. #54
<font color=#FF8C00>&#9830;</font> Updates various Skins.
<font color=#FF8C00>&#9830;</font> Update BigWigs profile.
<font color=#FF8C00>&#9830;</font> Add a notification toast frame.