@@ -1,3 +1,11 @@
+** v3.01, 19.06.2017**
+* Fix an error in the Orderhall skin. Update the Chromie Talent skin. Thx Simpy <3
+* Fix an error in the PvP skin that the tooltips won't show.
+* Update a lot of skins.
+* Create an option to disable the decorative Stripes.
+* Add own detached portraits for Player/Target. The options are disabled if BenikUI is loaded. -- Credits Benik
+* Add own options for transparent Actionbar Backdrop. The options are disabled if BenikUI is loaded. -- Credits Benik
+
 ** v3.00, 12.06.2017**
 * !! PLEASE DO A FRESH INSTALL !!
 * Add a skin for Premade Group Filter
